[수정] 프론트 수정 중

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -45,7 +45,7 @@
     <div class="sidebar-color position-fixed d-flex flex-column align-items-start flex-shrink-0 p-3 bg-body-tertiary justify-content-center"
          style="width: 280px; height: 100vh">
         <a href="/review" class="d-flex justify-content-center align-items-center mb-3 mb-md-0 link-body-emphasis text-decoration-none">
-            <span class="fs-4 text-center">둘레둘레</span>
+            <h3 class="fs-4 text-center mb-0">둘레둘레</h3>
         </a>
         <hr>
         <ul class="nav nav-pills flex-column mb-auto">
