--- a/src/main/resources/templates/plan/calendar.html
+++ b/src/main/resources/templates/plan/calendar.html
@@ -176,17 +176,32 @@
                         <div class="card-body">
                             <a th:href="@{/plan/show(p_id=${planner.plannerId})}">
                                 <div class="d-flex flex-column flex-lg-row">
-                                    <i class="bi bi-calendar h3 d-flex align-items-center pe-3"></i>
-                                    <div class="row flex-fill">
-                                        <div class="col-sm-10">
-                                            <h4 class="h5" th:text="${planner.plannerName}"></h4>
-                                            <span class="badge bg-secondary" th:text="${planner.startDate}"></span>
-                                            <span class="badge bg-secondary" th:text="${planner.endDate}"></span>
+                                    <th:block th:if="${planner.isAfter < 0}">
+                                        <i class="bi bi-calendar h3 d-flex align-items-center pe-3"></i>
+                                        <div class="row flex-fill">
+                                            <div class="col-sm-10">
+                                                <h4 class="h5" th:text="${planner.plannerName}"></h4>
+                                                <span class="badge bg-secondary start-date" th:text="${planner.startDate}"></span>
+                                                <span class="badge bg-secondary end-date" th:text="${planner.endDate}"></span>
+                                            </div>
+                                            <div class="col-sm-2 text-lg-end">
+                                                <div class="btn btn-primary">확인하기</div>
+                                            </div>
                                         </div>
-                                        <div class="col-sm-2 text-lg-end">
-                                            <div class="btn btn-primary">확인하기</div>
+                                    </th:block>
+                                    <th:block th:unless="${planner.isAfter < 0}">
+                                        <i class="bi bi-calendar-check h3 d-flex align-items-center pe-3"></i>
+                                        <div class="row flex-fill">
+                                            <div class="col-sm-10">
+                                                <h4 class="h5" th:text="${planner.plannerName}"></h4>
+                                                <span class="badge bg-primary start-date" th:text="${planner.startDate}"></span>
+                                                <span class="badge bg-primary end-date" th:text="${planner.endDate}"></span>
+                                            </div>
+                                            <div class="col-sm-2 text-lg-end">
+                                                <div class="btn btn-primary">확인하기</div>
+                                            </div>
                                         </div>
-                                    </div>
+                                    </th:block>
                                 </div>
                             </a>
                         </div>
@@ -208,17 +223,32 @@
                         <div class="card-body">
                             <a th:href="@{/plan/show(p_id=${planner.plannerId})}">
                                 <div class="d-flex flex-column flex-lg-row">
-                                    <i class="bi bi-calendar h3 d-flex align-items-center pe-3"></i>
-                                    <div class="row flex-fill">
-                                        <div class="col-sm-10">
-                                            <h4 class="h5" th:text="${planner.plannerName}"></h4>
-                                            <span class="badge bg-secondary" th:text="${planner.startDate}"></span>
-                                            <span class="badge bg-secondary" th:text="${planner.endDate}"></span>
+                                    <th:block th:if="${planner.isAfter < 0}">
+                                        <i class="bi bi-calendar h3 d-flex align-items-center pe-3"></i>
+                                        <div class="row flex-fill">
+                                            <div class="col-sm-10">
+                                                <h4 class="h5" th:text="${planner.plannerName}"></h4>
+                                                <span class="badge bg-secondary start-date" th:text="${planner.startDate}"></span>
+                                                <span class="badge bg-secondary end-date" th:text="${planner.endDate}"></span>
+                                            </div>
+                                            <div class="col-sm-2 text-lg-end">
+                                                <div class="btn btn-primary">확인하기</div>
+                                            </div>
                                         </div>
-                                        <div class="col-sm-2 text-lg-end">
-                                            <div class="btn btn-primary">확인하기</div>
+                                    </th:block>
+                                    <th:block th:unless="${planner.isAfter < 0}">
+                                        <i class="bi bi-calendar-check h3 d-flex align-items-center pe-3"></i>
+                                        <div class="row flex-fill">
+                                            <div class="col-sm-10">
+                                                <h4 class="h5" th:text="${planner.plannerName}"></h4>
+                                                <span class="badge bg-primary start-date" th:text="${planner.startDate}"></span>
+                                                <span class="badge bg-primary end-date" th:text="${planner.endDate}"></span>
+                                            </div>
+                                            <div class="col-sm-2 text-lg-end">
+                                                <div class="btn btn-primary">확인하기</div>
+                                            </div>
                                         </div>
-                                    </div>
+                                    </th:block>
                                 </div>
                             </a>
                         </div>
@@ -232,7 +262,7 @@
         </div>
 
         <button type="button" id="new-planner-btn" class="position-fixed rounded-pill btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#newPlannerModal">
-            <i class="bi bi-plus"></i>
+            <i class="bi bi-plus"></i>추가
         </button>
     </div>
 
@@ -262,6 +292,8 @@
 </div>
     <script>
         $(document).ready(function(){
+
+
             // 공통 flatpickr 설정을 함수로 만들기
             function setupFlatpickr(inputId) {
                 let fp = flatpickr(inputId, {
