--- a/src/main/resources/templates/plan/plan2.html
+++ b/src/main/resources/templates/plan/plan2.html
@@ -190,6 +190,19 @@
             font-size: 13px;
         }
 
+        .planner-name {
+            width: 350px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 1;
+            -webkit-box-orient: vertical;
+            line-height: 1.5;
+            height: 2rem;
+        }
+        .planner-date {
+            font-size: 0.8rem;
+        }
         /*맨왼쪽 바*/
         .nav-link {
             flex-direction: column;
@@ -334,7 +347,7 @@
 
     function LoadNameAndDay() {
         $('.planner-name').text(plannerName);
-        $('.planner-date').text(startDate + "~" + endDate);
+        $('.planner-date').text(startDate + " ~ " + endDate);
     }
 
     // 도시명 바꾸기
@@ -1521,9 +1534,9 @@
 
             <!--장소찾기-->
             <div id="select_item" class="vh-100 d-flex flex-column align-items-stretch bg-white" style="width: 380px;">
-                <div class="d-flex align-items-center flex-shrink-0 p-3 link-dark text-decoration-none">
+                <div class="d-flex flex-column p-3">
                     <span class="fs-5 fw-semibold planner-name">플래너 이름</span><br>
-                    <span class="fx-6 planner-date">날짜</span>
+                    <span class="planner-date text-secondary">날짜</span>
                 </div>
                 <div class="search-bar">
                     <input class="search-input" placeholder="장소를 검색하세요.">
